syntax = "proto3";

package domain.delivery.commands.v1;

import "google/protobuf/timestamp.proto";
import "domain/delivery/common/v1/common.proto";

// AcceptOrderResponse - Response for AcceptOrderCommand
message AcceptOrderResponse {
  string package_id = 1;
  domain.delivery.common.v1.PackageStatus status = 2;
  google.protobuf.Timestamp created_at = 3;
}

// AssignOrderResponse - Response for AssignOrderCommand
message AssignOrderResponse {
  string package_id = 1;
  string courier_id = 2;
  google.protobuf.Timestamp assigned_at = 3;
  domain.delivery.common.v1.PackageStatus status = 4;
}

// DeliverOrderResponse - Response for DeliverOrderCommand
message DeliverOrderResponse {
  string package_id = 1;
  domain.delivery.common.v1.PackageStatus status = 2;
  google.protobuf.Timestamp updated_at = 3;
}

// UpdateCourierLocationResponse - Response for UpdateCourierLocationCommand
message UpdateCourierLocationResponse {
  string courier_id = 1;
  google.protobuf.Timestamp updated_at = 2;
  bool location_saved = 3;
}

// RegisterCourierResponse - Response for RegisterCourierCommand
message RegisterCourierResponse {
  string courier_id = 1;
  domain.delivery.common.v1.CourierStatus status = 2;
  string temporary_password = 3; // For first login
  google.protobuf.Timestamp created_at = 4;
}

// Package represents a package in the system
message Package {
  string package_id = 1;
  string order_id = 2;
  string customer_id = 3;
  domain.delivery.common.v1.Address pickup_address = 4;
  domain.delivery.common.v1.Address delivery_address = 5;
  domain.delivery.common.v1.DeliveryPeriod delivery_period = 6;
  domain.delivery.common.v1.PackageInfo package_info = 7;
  domain.delivery.common.v1.Priority priority = 8;
  domain.delivery.common.v1.PackageStatus status = 9;
  string courier_id = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp assigned_at = 12;
  google.protobuf.Timestamp delivered_at = 13;
  string not_delivered_reason = 14;
}

// Courier represents a courier in the system
message Courier {
  string courier_id = 1;
  string name = 2;
  string phone = 3;
  string email = 4;
  domain.delivery.common.v1.TransportType transport_type = 5;
  double max_distance_km = 6;
  domain.delivery.common.v1.CourierStatus status = 7;
  int32 current_load = 8;
  int32 max_load = 9;
  double rating = 10;
  domain.delivery.common.v1.WorkHours work_hours = 11;
  string work_zone = 12;
  domain.delivery.common.v1.Location current_location = 13; // If include_location = true
  int32 successful_deliveries = 14;
  int32 failed_deliveries = 15;
  google.protobuf.Timestamp created_at = 16;
  google.protobuf.Timestamp last_active_at = 17;
}

// GetPackagePoolResponse - Response for GetPackagePoolCommand
message GetPackagePoolResponse {
  repeated Package packages = 1;
  int32 total_count = 2;
  PaginationInfo pagination = 3;
}

// GetCourierPoolResponse - Response for GetCourierPoolCommand
message GetCourierPoolResponse {
  repeated Courier couriers = 1;
  int32 total_count = 2;
  PaginationInfo pagination = 3;
}

// PaginationInfo
message PaginationInfo {
  int32 current_page = 1;
  int32 page_size = 2;
  int32 total_pages = 3;
  int32 total_items = 4;
}

